# visualfoosball-detection-cvblob

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testballdetection.cpp  testballdetection.hpp  testcvblobvideo.cpp  testfps.cpp
nbproject/: Makefile-Debug.mk
src/: BallDetectionTest.cpp  BallDetectionTest.hpp  BallDetector.cpp  BallDetector.hpp  CMakeLists.txt  Config.cpp  Config.hpp  CustomDeleters.cpp  CustomDeleters.hpp  FramePreparer.cpp  FramePreparer.hpp  ImageParams.cpp  ImageParams.h  Main.cpp  Util.cpp  Util.hpp
